Renames RunSimulation to ParamInputs, fixes overflow bug in 2D display

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -93,9 +93,12 @@ html {
 }
 
 .grid-display {
+	max-width: 600px;
+	max-height: 600px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	overflow: hidden;
 }
 
 .grid-row {
